Section Project @daniel.html

--- a/src/daniel.html
+++ b/src/daniel.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <main class="max-w-[1444px] mx-auto px-12 mt-32 flex gap-28 flex-col">
+    <main class="max-w-[1444px] mx-auto px-12 my-32 flex gap-28 flex-col">
       <section
         class="flex lg:flex-row flex-col gap-12 justify-between items-center w-full"
       >
@@ -69,6 +69,122 @@
         </div>
         <div class="lg:w-1/2 w-full">
           <img src="hero_daniel.png" alt="" />
+        </div>
+      </section>
+
+      <section class="flex flex-col gap-12 justify-center items-center w-full">
+        <h2 class="text-white text-3xl">Portfolio</h2>
+
+        <div class="grid lg:grid-cols-2 grid-cols-1 gap-8 place-items-center">
+          <img
+            src="project_daniel/project1.png"
+            alt=""
+            class="object-cover rounded-lg w-full"
+          />
+          <div class="flex flex-col justify-center gap-2 w-full">
+            <h5 class="text-gray-200 text-xl">SIMAKDA</h5>
+            <p class="text-gray-400 text-base">
+              Sistem Informasi Manajemen Anggaran dan Akuntansi Keuangan Daerah
+              pada Provinsi Kalimantan Barat
+            </p>
+            <div class="flex flex-row items-center gap-4 mt-4">
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                Kunjungi
+              </button>
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                <i
+                  class="bx bxl-github cursor-pointer hover:scale-110 transition-transform duration-300"
+                ></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="flex flex-col justify-center gap-2 w-full">
+            <h5 class="text-gray-200 text-xl">DEKADE</h5>
+            <p class="text-gray-400 text-base">
+              Sistem Informasi Dashboard Keuangan Daerah pada Provinsi
+              Kalimantan Barat
+            </p>
+            <div class="flex flex-row items-center gap-4 mt-4">
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                Kunjungi
+              </button>
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                <i
+                  class="bx bxl-github cursor-pointer hover:scale-110 transition-transform duration-300"
+                ></i>
+              </button>
+            </div>
+          </div>
+
+          <img
+            src="project_daniel/project2.webp"
+            alt=""
+            class="object-cover rounded-lg w-full"
+          />
+
+          <img
+            src="project_daniel/project3.png"
+            alt=""
+            class="object-cover rounded-lg w-full"
+          />
+          <div class="flex flex-col justify-center gap-2 w-full">
+            <h5 class="text-gray-200 text-xl">CAKRAM</h5>
+            <p class="text-gray-400 text-base">
+              Sistem Informasi
+              <span class="italic">Continuous Audit Kuburaya Menanjak</span>
+              pada Kabupaten Kuburaya
+            </p>
+            <div class="flex flex-row items-center gap-4 mt-4">
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                Kunjungi
+              </button>
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                <i
+                  class="bx bxl-github cursor-pointer hover:scale-110 transition-transform duration-300"
+                ></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="flex flex-col justify-center gap-2 w-full">
+            <h5 class="text-gray-200 text-xl">DATA KONTRAK</h5>
+            <p class="text-gray-400 text-base">
+              Sistem Informasi Data Kontrak pada Provinsi Kalimantan Barat
+            </p>
+            <div class="flex flex-row items-center gap-4 mt-4">
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                Kunjungi
+              </button>
+              <button
+                class="bg-gray-600 px-4 py-2 rounded-lg text-gray-200 hover:bg-gray-700"
+              >
+                <i
+                  class="bx bxl-github cursor-pointer hover:scale-110 transition-transform duration-300"
+                ></i>
+              </button>
+            </div>
+          </div>
+
+          <img
+            src="project_daniel/project4.png"
+            alt=""
+            class="object-cover rounded-lg w-full"
+          />
         </div>
       </section>
     </main>
