--- a/src/daniel.html
+++ b/src/daniel.html
@@ -73,7 +73,9 @@
       </section>
 
       <section class="flex flex-col gap-12 justify-center items-center w-full">
-        <h2 class="text-white text-3xl">Portfolio</h2>
+        <h2 class="text-white text-3xl">
+          Portfolio by <span class="text-blue-500 font-bold">Daniel</span>
+        </h2>
 
         <div class="grid lg:grid-cols-2 grid-cols-1 gap-8 place-items-center">
           <img
