--- a/src/daniel.html
+++ b/src/daniel.html
@@ -189,6 +189,36 @@
           />
         </div>
       </section>
+
+      <section class="flex flex-col w-full gap-12">
+        <h2 class="text-white text-3xl text-center">
+          Contact <span class="text-blue-500">Me</span>
+        </h2>
+        <div class="flex flex-col gap-4">
+          <h5 class="text-white text-lg">Let's Connect</h5>
+          <input
+            type="text"
+            placeholder="Your Name..."
+            class="p-2 rounded-lg"
+          />
+          <input
+            type="text"
+            placeholder="Your Email..."
+            class="p-2 rounded-lg"
+          />
+          <textarea
+            type="text"
+            placeholder="Your Message..."
+            class="p-2 rounded-lg"
+            rows="5"
+          ></textarea>
+          <button
+            class="bg-blue-500 rounded-lg p-2 text-white hover:bg-blue-600 w-40 transition-colors"
+          >
+            Send Message
+          </button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
