--- a/src/daniel.html
+++ b/src/daniel.html
@@ -219,6 +219,11 @@
           </button>
         </div>
       </section>
+
+      <footer class="flex flex-row justify-between w-full">
+        <h5 class="text-gray-400 font-bold text-xl">Daniel Maruli Sitohang</h5>
+        <h5 class="text-gray-400 font-bold text-xl">@2024 dibimbing.id</h5>
+      </footer>
     </main>
   </body>
 </html>
