--- a/nona.html
+++ b/nona.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>MASIH BELAJAR GIT</h1>
+    <div class="top-bar"> 
+        <div class="left-menu">
+            <ul>       
+                <li>Bootcamp</li>
+                <li>Video Course online</li>
+                <li>Kelas Gratis</li>
+                <li>Company Training</li>
+                <li>Afiliasi</li>
+            </ul>
+        </div>
+        <div class="social-menu">
+            <ul>
+                <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-tiktok"></ion-icon></a></li>
+                <li><a href=""><ion-icon name="logo-twitter"></ion-icon></a></li>
+            </ul>
+        </div>
+    </div>
+    
+    <div class="logo">
+        <a href=""><img src="logo.png" alt="logo"></a>
+    </div>
+    <nav>
 </body>
 </html>
