--- a/nona.html
+++ b/nona.html
@@ -122,6 +122,81 @@
     </div>
 
   </div>
+  <!-- KONTEN 2 -->
+
+  <section class="terbaru">
+    <div class="grid_terbaru">
+      <div class="terbaru_section">
+        <img src="image/terbaru.png" alt="" style="width: 100%" />
+        <div class="list_terbaru">
+          <img src="image/terbaru1.png" alt="" />
+          <div class="detail_terbaru">
+            <h4 class="judul_news">DATA SCIENCE</h4>
+            <p class="deskripsi_news">
+              Port Workers Portray the Reality of Bottlenecks
+            </p>
+            <p class="penulis_news">
+              Wade Warren • <span class="waktu_news">26 Jan 2019</span>
+            </p>
+            <p class="detail_deskripsi">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit
+              faucibus venenatis mauris aliquam lectus a rhoncus et. Ante
+              vulputate nisl pellentesque blandit vitae. Eu, scelerisque ...
+            </p>
+          </div>
+        </div>
+        <div class="list_terbaru">
+          <img src="image/terbaru1.png" alt="" />
+          <div class="detail_terbaru">
+            <h4 class="judul_news">DATA SCIENCE</h4>
+            <p class="deskripsi_news">
+              Port Workers Portray the Reality of Bottlenecks
+            </p>
+            <p class="penulis_news">
+              Wade Warren • <span class="waktu_news">26 Jan 2019</span>
+            </p>
+            <p class="detail_deskripsi">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit
+              faucibus venenatis mauris aliquam lectus a rhoncus et. Ante
+              vulputate nisl pellentesque blandit vitae. Eu, scelerisque ...
+            </p>
+          </div>
+        </div>
+        <div class="list_terbaru">
+          <img src="image/terbaru1.png" alt="" />
+          <div class="detail_terbaru">
+            <h4 class="judul_news">DATA SCIENCE</h4>
+            <p class="deskripsi_news">
+              Port Workers Portray the Reality of Bottlenecks
+            </p>
+            <p class="penulis_news">
+              Wade Warren • <span class="waktu_news">26 Jan 2019</span>
+            </p>
+            <p class="detail_deskripsi">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit
+              faucibus venenatis mauris aliquam lectus a rhoncus et. Ante
+              vulputate nisl pellentesque blandit vitae. Eu, scelerisque ...
+            </p>
+          </div>
+        </div>
+        <div class="list_terbaru">
+          <img src="image/terbaru1.png" alt="" />
+          <div class="detail_terbaru">
+            <h4 class="judul_news">DATA SCIENCE</h4>
+            <p class="deskripsi_news">
+              Port Workers Portray the Reality of Bottlenecks
+            </p>
+            <p class="penulis_news">
+              Wade Warren • <span class="waktu_news">26 Jan 2019</span>
+            </p>
+            <p class="detail_deskripsi">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit
+              faucibus venenatis mauris aliquam lectus a rhoncus et. Ante
+              vulputate nisl pellentesque blandit vitae. Eu, scelerisque ...
+            </p>
+          </div>
+        </div>
+      </div>
 
 </body>
 </html>
