--- a/nona.html
+++ b/nona.html
@@ -197,6 +197,67 @@
           </div>
         </div>
       </div>
+      <div class="rekomendasi">
+        <h2>REKOMENDASI KAMI</h2>
+
+        <hr />
+        <div>
+          <img
+            src="image/terbaru1.png"
+            alt=""
+            style="width: 100%"
+            height="160"
+          />
+          <p style="margin-top: 10px">
+            Your Must-Read Roadmap to Optimize for New HTS ...
+          </p>
+        </div>
+        <div>
+          <img
+            src="image/terbaru1.png"
+            alt=""
+            style="width: 100%"
+            height="160"
+          />
+          <p style="margin-top: 10px">
+            Your Must-Read Roadmap to Optimize for New HTS ...
+          </p>
+        </div>
+        <div>
+          <img
+            src="image/terbaru1.png"
+            alt=""
+            style="width: 100%"
+            height="160"
+          />
+          <p style="margin-top: 10px">
+            Your Must-Read Roadmap to Optimize for New HTS ...
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+    <br>
+    <div style=" 
+    margin-left: 210px;
+    margin-top: 50px;
+    margin-right: 200px;">
+        <h2>Leave a Comment</h2>
+        <form>
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="form-group">
+                <label for="comment">Comment:</label>
+                <textarea class="form-control" id="comment" rows="3" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        
+        
+        </div>
+    </div>
 
 </body>
 </html>
