--- a/src/deva.html
+++ b/src/deva.html
@@ -21,7 +21,7 @@
           href="./index.html"
           class="flex justify-center md:justify-start place-content-center"
         >
-          <img src="assets/logo dapoer dadong.png" alt="logo restoran" />
+          <img src="project_deva/logo dapoer dadong.png" alt="logo restoran" />
         </a>
 
         <!-- Menu Web -->
@@ -38,7 +38,7 @@
         <div class="place-content-center">
           <div class="flex justify-end gap-2">
             <a href="">
-              <img src="assets/pesanan.png" alt="pesanan" />
+              <img src="project_deva/pesanan.png" alt="pesanan" />
             </a>
             <a
               class="hidden text-xl text-white md:block place-content-center"
@@ -59,5 +59,16 @@
         </ul>
       </nav>
     </header>
+
+    <script>
+      // Ambil elemen hamburger dan menu
+      const hamburgerButton = document.getElementById("hamburger-button");
+      const mobileMenu = document.getElementById("mobile-menu");
+
+      // Tambahkan event listener pada tombol hamburger
+      hamburgerButton.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+      });
+    </script>
   </body>
 </html>
