--- a/src/denaldo.html
+++ b/src/denaldo.html
@@ -6,7 +6,32 @@
     <link href="./outputDenaldo.css" rel="stylesheet" />
     <title>Denaldo Page</title>
 </head>
-<body>
-    <h1>Hello World</h1>
+<body class="text-gray-100 bg-slate-900">
+    <!-- <h1>Hello World</h1> -->
+    <!-- Header -->
+    <div class="max-w-screen-lg px-3 py-6 mx-auto">
+        <div
+          class="flex flex-col gap-y-3 sm:flex-row sm:items-center sm:justify-between"
+        >
+          <a href="Header Nama"
+            ><div
+              class="flex items-center text-xl font-bold text-transparent bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text"
+            >
+              Denaldo Ridhiatama
+            </div>
+          </a>
+  
+          <nav>
+            <ul class="flex font-medium text-gray-200 gap-x-3">
+              <li class="hover:text-white">
+                <a href="LinkedIn">LinkedIn</a>
+              </li>
+              <li class="hover:text-white">
+                <a href="Github">GitHub</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
 </body>
 </html>
