--- a/src/denaldo.html
+++ b/src/denaldo.html
@@ -24,10 +24,10 @@
           <nav>
             <ul class="flex font-medium text-gray-200 gap-x-3">
               <li class="hover:text-white">
-                <a href="LinkedIn">LinkedIn</a>
+                <a href="About">About</a>
               </li>
               <li class="hover:text-white">
-                <a href="Github">GitHub</a>
+                <a href="Contact">Contact</a>
               </li>
             </ul>
           </nav>
