penambahan CTA pada main di deva.html

--- a/src/deva.html
+++ b/src/deva.html
@@ -112,6 +112,49 @@
           </div>
         </div>
       </section>
+
+      <section style="background-color: #4c4b16" id="keuntungan">
+        <div
+          class="grid grid-cols-2 gap-2 py-3 text-xl text-white md:mx-10 md:grid-cols-4"
+        >
+          <div
+            class="flex flex-col items-center justify-center gap-2 md:flex-row"
+          >
+            <img src="assets/super diskon.png" alt="super diskon" />
+            <div class="text-center md:text-left">
+              <p>Super</p>
+              <p>Diskon</p>
+            </div>
+          </div>
+          <div
+            class="flex flex-col items-center justify-center gap-2 md:flex-row"
+          >
+            <img src="assets/nyaman.png" alt="suasana indah" />
+            <div class="text-center md:text-left">
+              <p>Suasana Indah</p>
+              <p>& Nyaman</p>
+            </div>
+          </div>
+          <div
+            class="flex flex-col items-center justify-center gap-2 md:flex-row"
+          >
+            <img src="assets/cepat sedia.png" alt="cepat sedia makanan" />
+            <div class="text-center md:text-left">
+              <p>Makanan cepat</p>
+              <p>Tersedia</p>
+            </div>
+          </div>
+          <div
+            class="flex flex-col items-center justify-center gap-2 md:flex-row"
+          >
+            <img src="assets/bebas pilih.png" alt="bebas pilih tempat" />
+            <div class="text-center md:text-left">
+              <p>Bebas Pilih</p>
+              <p>Tempat Duduk</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="grid md:grid-cols-2 bg-[#4c4b16] px-10 pb-5">
