tambah daftar menu promo pada main di deva.html

--- a/src/deva.html
+++ b/src/deva.html
@@ -155,6 +155,153 @@
           </div>
         </div>
       </section>
+
+      <section style="background-color: #e9eed988">
+        <div class="hidden md:block" id="promo-paket-rame">
+          <h1 class="flex justify-center py-5 text-3xl font-bold">
+            Promo Paket Rame Diskon 40%
+          </h1>
+        </div>
+        <div class="md:hidden">
+          <div class="py-5 text-2xl font-bold">
+            <h1 class="flex justify-center">Promo Paket Rame</h1>
+            <h1 class="flex justify-center">Diskon 40%</h1>
+          </div>
+        </div>
+        <div
+          class="grid items-center justify-center grid-cols-1 mx-5 md:grid-cols-4"
+        >
+          <div
+            class="flex justify-center mx-5 mb-5 transition duration-300 md:mb-0 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ayam reguler.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">
+                  Ayam Rame-rame
+                </p>
+                <p class="flex justify-center text-2xl">Reguler</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">70 RB</p>
+                  <p>40 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex justify-center mx-5 mb-5 transition duration-300 md:mb-0 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ikan reguler.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">
+                  Ikan Seru-seruan
+                </p>
+                <p class="flex justify-center text-2xl">Reguler</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">100 RB</p>
+                  <p>70 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex justify-center mx-5 mb-5 transition duration-300 md:mb-0 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ayam reguler.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">
+                  Ayam Kompak
+                </p>
+                <p class="flex justify-center text-2xl">Komplit</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">150 RB</p>
+                  <p>90 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex justify-center mx-5 transition duration-300 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ikan komplit.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">
+                  Rombongan Ikan
+                </p>
+                <p class="flex justify-center text-2xl">Reguler</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">180 RB</p>
+                  <p>100 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="flex justify-center py-5" href="./menu.html">
+          <button class="text-lg hover:font-bold hover:text-[#4C4B16]">
+            Menu Lainnya >
+          </button>
+        </a>
+      </section>
     </main>
 
     <footer class="grid md:grid-cols-2 bg-[#4c4b16] px-10 pb-5">
