penambahan galeri bersama pada main di deva.html

--- a/src/deva.html
+++ b/src/deva.html
@@ -302,6 +302,51 @@
           </button>
         </a>
       </section>
+
+      <section class="">
+        <div class="bg-[#4c4b16] grid md:grid-cols-2 py-5 px-10 grid-cols-1">
+          <div class="items-center gap-2 pb-5 text-white md:flex md:py-0">
+            <a
+              class="flex justify-center text-2xl font-bold md:justify-normal"
+              href=""
+            >
+              Galeri Bersama
+            </a>
+            <p class="hidden text-3xl font-bold md:block">-</p>
+            <p class="flex justify-center text-xl md:justify-normal">
+              @dapoerdadong
+            </p>
+          </div>
+          <div class="flex items-center justify-center gap-5 md:justify-end">
+            <a href="">
+              <img src="assets/logo_ig.png" alt="logo-ig" />
+            </a>
+            <a href="">
+              <img src="assets/logo_fb.png" alt="logo-fb" />
+            </a>
+          </div>
+        </div>
+        <a
+          class="bg-[#4c4b16] px-10 pb-5 md:grid-cols-3 grid gap-3 items-center"
+          href=""
+        >
+          <img
+            src="assets/galeri 1.png"
+            alt="galeri-1"
+            class="w-full mb-5 border-4 border-white rounded-xl md:mb-0"
+          />
+          <img
+            src="assets/galeri 2.png"
+            alt="galeri-2"
+            class="w-full mb-5 border-4 border-white md:mb-0 rounded-xl"
+          />
+          <img
+            src="assets/galeri 3.png"
+            alt="galeri-3"
+            class="w-full border-4 border-white rounded-xl"
+          />
+        </a>
+      </section>
     </main>
 
     <footer class="grid md:grid-cols-2 bg-[#4c4b16] px-10 pb-5">
