--- a/src/deva.html
+++ b/src/deva.html
@@ -303,6 +303,148 @@
         </a>
       </section>
 
+      <section class="" style="background-color: #e9eed988">
+        <div class="hidden md:block">
+          <h1 class="flex justify-center py-5 text-3xl font-bold">
+            Menu Trendy
+          </h1>
+        </div>
+        <div class="md:hidden">
+          <div class="py-5 text-2xl font-bold">
+            <h1 class="flex justify-center">Menu Trendy</h1>
+          </div>
+        </div>
+        <div
+          class="grid items-center justify-center grid-cols-1 mx-5 md:grid-cols-4"
+        >
+          <div
+            class="flex justify-center mx-5 mb-5 transition duration-300 md:mb-0 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ayam bakar reg.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">Ayam Bakar</p>
+                <p class="flex justify-center text-2xl">Reguler</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">25 RB</p>
+                  <p>20 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex justify-center mx-5 mb-5 transition duration-300 md:mb-0 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ikan bakar reg.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">Ikan Bakar</p>
+                <p class="flex justify-center text-2xl">Reguler</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">35 RB</p>
+                  <p>30 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex justify-center mx-5 mb-5 transition duration-300 md:mb-0 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ayam grg cukup.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">
+                  Ayam Goreng
+                </p>
+                <p class="flex justify-center text-2xl">Cukup</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">20 RB</p>
+                  <p>15 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex justify-center mx-5 transition duration-300 hover:scale-110"
+          >
+            <div
+              class="w-full border-4 border-white shadow-2xl rounded-xl"
+              style="background-color: #cbd2a4"
+            >
+              <img
+                class="w-full border-b-4 border-white rounded-t-xl"
+                src="assets/ikan grg cukup.png"
+                alt=""
+              />
+              <div class="py-2">
+                <p class="flex justify-center text-2xl font-bold">
+                  Ikan Goreng
+                </p>
+                <p class="flex justify-center text-2xl">Cukup</p>
+                <div class="flex justify-center gap-2 text-xl">
+                  <p class="line-through font-extralight">25 RB</p>
+                  <p>20 RB</p>
+                </div>
+                <div class="flex justify-center py-1">
+                  <button
+                    class="px-5 py-1 text-2xl font-bold text-white rounded-lg bg-[#4C4B16] hover:bg-[#838125]"
+                  >
+                    Lihat Detail
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="flex justify-center py-5" href="./menu.html">
+          <button class="text-lg hover:font-bold hover:text-[#4C4B16]">
+            Menu Lainnya >
+          </button>
+        </a>
+      </section>
+
       <section class="">
         <div class="bg-[#4c4b16] grid md:grid-cols-2 py-5 px-10 grid-cols-1">
           <div class="items-center gap-2 pb-5 text-white md:flex md:py-0">
