--- a/nona.html
+++ b/nona.html
@@ -12,6 +12,19 @@
         <div class="font-sans font-serif text-2xl font-semibold text-gray-800">
             Moshi Moshi Coffee
         </div>
+         <!-- Navigation Menu -->
+         <nav>
+          <ul class="flex space-x-6">
+              <li><a href="#hero" class="text-lg font-medium text-gray-800 transition hover:text-gray-600">Home</a></li>
+              <li><a href="#about" class="text-lg font-medium text-gray-800 transition hover:text-gray-600">About</a></li>
+              <li><a href="#menu" class="text-lg font-medium text-gray-800 transition hover:text-gray-600">Menu</a></li>
+              <li><a href="#contact" class="text-lg font-medium text-gray-800 transition hover:text-gray-600">Contact</a></li>
+              <li><a href="#order" class="text-lg font-medium text-gray-800 transition hover:text-gray-600">Order</a></li>
+          </ul>
+      </nav>
+  </div>
+</header>
+
   
 </body>
 </html>
