--- a/nona.html
+++ b/nona.html
@@ -24,7 +24,27 @@
       </nav>
   </div>
 </header>
+<!-- Hero Section -->
+    
+<section id="hero" class="relative bg-center bg-cover h-96" style="background-image: url('./image/coffee-shop-interior.jpg');">
+  <div class="absolute inset-0 bg-black opacity-40"></div>
+  <div class="absolute inset-0 z-10 flex items-center justify-center px-4 text-center">
+      <div class="space-y-8 text-white">
+          <h1 class="text-5xl font-bold leading-tight">Welcome to </h1> <h1 class="font-serif text-5xl bg-black">Moshi Moshi Coffee</h1>
+          <p class="text-xl">A cozy place to enjoy your favorite coffee.</p>
+          <a href="#menu" class="inline-block px-12 py-3 mt-8 text-lg font-medium text-white uppercase transition bg-gray-900 border border-gray-900 rounded-lg hover:bg-gray-800">Our Menu</a>
+      </div>
+  </div>
+</section>
 
+
+    <!-- About Section -->
+    <section id="about" class="px-12 py-16">
+        <div class="space-y-6 text-center">
+            <h2 class="text-3xl font-semibold text-gray-800">About Us</h2>
+            <p class="text-lg text-gray-700">Cafe  is where simplicity meets quality. We serve freshly brewed coffee and delicious pastries, all in a minimalistic and cozy space.</p>
+        </div>
+    </section>
   
 </body>
 </html>
