--- a/nona.html
+++ b/nona.html
@@ -45,6 +45,56 @@
             <p class="text-lg text-gray-700">Cafe  is where simplicity meets quality. We serve freshly brewed coffee and delicious pastries, all in a minimalistic and cozy space.</p>
         </div>
     </section>
+    <!-- Menu Section -->
+    <section id="menu" class="px-12 py-16 bg-gray-50">
+      <div class="space-y-6 text-center">
+          <h2 class="text-3xl font-semibold text-gray-800"> Menu</h2>
+          <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
+              <!-- Coffee Latte Item -->
+              <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+                  <img src="./image/coffee-latte.jpg" alt="Coffee Latte" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <h3 class="mt-4 text-xl font-semibold text-gray-800">Coffee Latte</h3>
+                  <p class="mt-2 text-gray-600">A rich and smooth espresso with steamed milk, perfect for any time of the day.</p>
+                  <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
+              </div>
+              <!-- Cappuccino Item -->
+              <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+                  <img src="./image/coffee-cappuccino.jpg" alt="Cappuccino" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <h3 class="mt-4 text-xl font-semibold text-gray-800">Cappuccino</h3>
+                  <p class="mt-2 text-gray-600">A balanced mix of espresso, steamed milk, and frothy foam.</p>
+                  <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
+              </div>
+              <!-- Croissant Item -->
+              <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
+                  <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
+                  <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
+              </div>
+              <!-- Croissant Item -->
+              <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
+                  <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
+                  <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
+              </div>
+              <!-- Croissant Item -->
+              <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
+                  <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
+                  <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
+              </div>
+              <!-- Croissant Item -->
+              <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
+                  <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
+                  <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
+              </div>
+          </div>
+      </div>
+  </section>
   
 </body>
 </html>
